--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,21 @@
-@import './common';
 @import './variables';
+@import './mixins';
+@import './common';
+@import './base';
+@import './reset';
+@import './hidden';
+@import './layout/hero-header';
+@import './layout/welcome';
+@import './layout/what-offer';
+@import './layout/area-servise';
+@import './layout/why-choose';
+@import './layout/gallery';
+@import './layout/mix-form';
+@import './layout/prise';
+@import './layout/stay-updated';
+@import './layout/footer';
+
+
+
+
+
