--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -1,33 +1,33 @@
-// @mixin font($fs, $fw, $lh, $ls) {
-//   font-size: $fs;
-//   font-weight: $fw;
-//   line-height: $lh;
-//   letter-spacing: $ls;
-// }
+@mixin font($fs, $fw, $lh, $ls) {
+  font-size: $fs;
+  font-weight: $fw;
+  line-height: $lh;
+  letter-spacing: $ls;
+}
 
-// @mixin mobile {
-//   @media screen and (min-width: 320px) {
-//     @content;
-//   }
-// }
+@mixin mobile {
+  @media screen and (min-width: 320px) {
+    @content;
+  }
+}
 
-// @mixin tablet {
-//   @media screen and (min-width: 768px) {
-//     @content;
-//   }
-// }
+@mixin tablet {
+  @media screen and (min-width: 768px) {
+    @content;
+  }
+}
 
-// @mixin desktop {
-//   @media screen and (min-width: 1200px) {
-//     @content;
-//   }
-// }
+@mixin desktop {
+  @media screen and (min-width: 1200px) {
+    @content;
+  }
+}
 
-// @mixin retina {
+@mixin retina {
 
-//   @media (min-device-pixel-ratio: 2),
-//   (min-resolution: 192dpi),
-//   (min-resolution: 2dppx) {
-//     @content;
-//   }
-// }
+  @media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+    @content;
+  }
+}
