--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,5 +1,7 @@
 $background-dark: #1C2752;
 $background-orange: #FFB342;
+$background-light-grey: #F4F4F4;
+$background-light: #F5F5F5;
 $color-text-dark: #1C2752;
 $color-text-orange: #FFB342;
 $color-text-grey: #7E7E7E;
