--- a/src/partials/prise.html
+++ b/src/partials/prise.html
@@ -1,2 +1,28 @@
 <section class="prise" id="prise"></section>
-<div class="container"></div>
+<div class="container">
+  <div>
+    <svg>
+      <use></use>
+    </svg>
+    <p>Price Plan</p>
+    <H1>Let’s Customize Work With Affordable Price</H1>
+    <p>This is passionate about delivering growth and the new possibilities in the field of electrical services. We have extensive experience of domestic and business electrical installations and no job is too small.</p>
+  </div>
+  <ul>
+    <li>
+      <h2>Basic plan</h2>
+      <span>$ 599.00</span>
+      <p>Per Visit Charge</p>
+    </li>
+    <li>
+      <h2>Standard</h2>
+      <span>$ 699.00</span>
+      <p>Per Visit Charge</p>
+    </li>
+    <li>
+      <h2>Professional</h2>
+      <span>$ 799.00</span>
+      <p>Per Visit Charge</p>
+    </li>
+  </ul>
+</div>
