--- a/src/partials/prise.html
+++ b/src/partials/prise.html
@@ -1,28 +1,83 @@
-<section class="prise" id="prise"></section>
+<section class="section prise" id="prise"></section>
 <div class="container">
-  <div>
-    <svg>
-      <use></use>
-    </svg>
-    <p>Price Plan</p>
-    <H1>Let’s Customize Work With Affordable Price</H1>
-    <p>This is passionate about delivering growth and the new possibilities in the field of electrical services. We have extensive experience of domestic and business electrical installations and no job is too small.</p>
+  <div class="prise__label">
+    <!-- <svg class="prise__svg" width="8px" height="12px">
+      <use href="./images/sprite.svg#icon-square"></use>
+      <use href="./images/sprite.svg#icon-pencil"></use>
+    </svg> -->
+    <p class="prise__label-text">Price Plan</p>
   </div>
+  <h1>Let’s Customize Work With Affordable Price</h1>
+  <p>
+    This is passionate about delivering growth and the new possibilities in the
+    field of electrical services. We have extensive experience of domestic and
+    business electrical installations and no job is too small.
+  </p>
   <ul>
     <li>
       <h2>Basic plan</h2>
       <span>$ 599.00</span>
       <p>Per Visit Charge</p>
+      <ul>
+        <li>Electrical Service</li>
+        <li>Distribution Power Systemss</li>
+        <li>High & Medium Voltages</li>
+        <li>Industrial Control Systems</li>
+        <li>Switch Installation</li>
+        <li>Generator Installations</li>
+        <li>Innovative Construction</li>
+      </ul>
+      <button type="button">Buy Now</button>
     </li>
     <li>
       <h2>Standard</h2>
       <span>$ 699.00</span>
       <p>Per Visit Charge</p>
+      <ul>
+        <li>PLC Controls</li>
+        <li>Conveyor systems</li>
+        <li>Wiring renovations</li>
+        <li>Electric Water Heater Repair</li>
+        <li>Service And Panel Upgrades</li>
+        <li>Efficient Lighting Solutions</li>
+        <li>Site lighting</li>
+      </ul>
+      <button type="button">Buy Now</button>
     </li>
     <li>
       <h2>Professional</h2>
       <span>$ 799.00</span>
       <p>Per Visit Charge</p>
+      <ul>
+        <li>Cable Tray Installations</li>
+        <li>Wiring Upgrades</li>
+        <li>Energy Efficient Lighting</li>
+        <li>Emergency Generating</li>
+        <li>Pools And Hot Tubs</li>
+        <li>Air Conditioning Units</li>
+        <li>Generating Systems</li>
+      </ul>
+      <button type="button">Buy Now</button>
     </li>
   </ul>
+  <div>
+    <ul>
+      <li>
+        <h3>Affordable Price</h3>
+        <p>
+          We adhere strictly to the current National Electrical Code, and we
+          conduct regular in-house sessions with our technicians to review any
+          code changes and applications.
+        </p>
+      </li>
+      <li>
+        <h3>Fixed Plan</h3>
+        <p>
+          We understand fully that your time is of extreme value. You will never
+          have to worry about waiting around for our trained technicians.24/7
+          Service Providers Affordable Price.
+        </p>
+      </li>
+    </ul>
+  </div>
 </div>
