--- a/src/partials/area-servise.html
+++ b/src/partials/area-servise.html
@@ -12,11 +12,20 @@
     </p>
     <ul class="servise__list list">
       <li class="servise-cards">
-        <img
+        <picture>
+            <source
+              srcset="
+              ./images/service/service1.png 1x,
+              ./images/service/service1-2x.png 2x
+              "
+            />
+            <img
           src="./images/service/service1.png"
           alt="cards-images"
           class="servise-cards__images"
         />
+          </picture>
+       
         <h3 class="servise-cards__title">Air condition service</h3>
         <p class="servise-cards__text">
           Services are able to service your entire electrical infrastructure
@@ -25,11 +34,20 @@
         <button type="button" class="servise-cards__btn">View More</button>
       </li>
       <li class="servise-cards">
-        <img
+        <picture>
+        <source
+        srcset="
+        ./images/service/service2.png 1x,
+        ./images/service/service2-2x.png 2x
+        "
+      />
+      <img
           src="./images/service/service2.png"
           alt="cards-images"
           class="servise-cards__images"
         />
+    </picture>
+       
         <h3 class="servise-cards__title">Electrical installation</h3>
         <p class="servise-cards__text service-second-text">
           The art electrical installations that provide all the necessary
@@ -39,11 +57,21 @@
         <button type="button" class="servise-cards__btn">View More</button>
       </li>
       <li class="servise-cards">
-        <img
-          src="./images/service/service3.png"
-          alt="cards-images"
-          class="servise-cards__images"
-        />
+        <picture>
+            <source
+              srcset="
+              ./images/service/service3.png 1x,
+              ./images/service/service3-2x.png 2x
+              "
+            />
+            <img
+            src="./images/service/service3.png"
+            alt="cards-images"
+            class="servise-cards__images"
+          />
+          </picture>
+       
+        
         <h3 class="servise-cards__title">General Builder</h3>
         <p class="servise-cards__text">
           We provide impeccable safety assessments to both commercial,
@@ -52,11 +80,20 @@
         <button type="button" class="servise-cards__btn">View More</button>
       </li>
       <li class="servise-cards">
-        <img
-          src="./images/service/service4.png"
-          alt="cards-images"
-          class="servise-cards__images"
-        />
+        <picture>
+            <source
+              srcset="
+              ./images/service/service4.png 1x,
+              ./images/service/service4-2x.png 2x
+              "
+            />
+            <img
+            src="./images/service/service4.png"
+            alt="cards-images"
+            class="servise-cards__images"
+          />
+          </picture>
+       
         <h3 class="servise-cards__title">Security System</h3>
         <p class="servise-cards__text service-second-text">
           Utilized for measuring flow, temperature level & pressure in the
@@ -65,11 +102,20 @@
         <button type="button" class="servise-cards__btn">View More</button>
       </li>
       <li class="servise-cards">
-        <img
-          src="./images/service/service5.png"
-          alt="cards-images"
-          class="servise-cards__images"
-        />
+        <picture>
+            <source
+              srcset="
+              ./images/service/service5.png 1x,
+              ./images/service/service5-2x.png 2x
+              "
+            />
+            <img
+            src="./images/service/service5.png"
+            alt="cards-images"
+            class="servise-cards__images"
+          />
+          </picture>
+        
         <h3 class="servise-cards__title">Service & maintenance</h3>
         <p class="servise-cards__text">
           Electrical Services are able to service your entire electrical
@@ -78,11 +124,20 @@
         <button type="button" class="servise-cards__btn">View More</button>
       </li>
       <li class="servise-cards">
-        <img
-          src="./images/service/service6.png"
-          alt="cards-images"
-          class="servise-cards__images"
-        />
+        <picture>
+            <source
+              srcset="
+              ./images/service/service6.png 1x,
+              ./images/service/service6-2x.png 2x
+              "
+            />
+            <img
+            src="./images/service/service6.png"
+            alt="cards-images"
+            class="servise-cards__images"
+          />
+          </picture>
+        
         <h3 class="servise-cards__title">House Extensions</h3>
         <p class="servise-cards__text">
           Traditionally, electricity is supplied through overhead network poles,
