--- a/src/partials/mix-form.html
+++ b/src/partials/mix-form.html
@@ -2,7 +2,11 @@
   <div class="conteiner">
     <div>
         <div class="customers_container">
-          <p class="customers_paragraf">Testimonial</p>
+          <p class="customers_paragraf">
+            <!-- <svg>
+              <use href="./images/mix-form.svg#icon-notebook"></use>
+            </svg> -->
+            Testimonial</p>
           <h3 class="customers_title">Customers Says</h3>
         </div>
         <div class="slider_conteiner">
