--- a/src/partials/prise.html
+++ b/src/partials/prise.html
@@ -1,21 +1,26 @@
 <section class="section prise" id="prise"></section>
 <div class="container">
-  <div class="prise__label">
-    <!-- <svg class="prise__svg" width="8px" height="12px">
-      <use href="./images/sprite.svg#icon-square"></use>
-      <use href="./images/sprite.svg#icon-pencil"></use>
-    </svg> -->
-    <p class="prise__label-text">Price Plan</p>
+  <div class="prise__top">
+    <div class="prise__label">
+      <svg class="prise__svg" width="22px" height="27px">
+        <use href="./images/sprite.svg#icon-prise"></use>
+      </svg>
+      <span class="prise__label-text">Price Plan</span>
+    </div>
+    <div class="prise__top-title">
+      <h2>Let’s Customize Work With Affordable Price</h2>
+    </div>
+    <div class="prise__top-text">
+      <p>
+        This is passionate about delivering growth and the new possibilities in
+        the field of electrical services. We have extensive experience of
+        domestic and business electrical installations and no job is too small.
+      </p>
+    </div>
   </div>
-  <h1>Let’s Customize Work With Affordable Price</h1>
-  <p>
-    This is passionate about delivering growth and the new possibilities in the
-    field of electrical services. We have extensive experience of domestic and
-    business electrical installations and no job is too small.
-  </p>
   <ul>
     <li>
-      <h2>Basic plan</h2>
+      <h3>Basic plan</h3>
       <span>$ 599.00</span>
       <p>Per Visit Charge</p>
       <ul>
@@ -30,7 +35,7 @@
       <button type="button">Buy Now</button>
     </li>
     <li>
-      <h2>Standard</h2>
+      <h3>Standard</h3>
       <span>$ 699.00</span>
       <p>Per Visit Charge</p>
       <ul>
@@ -45,7 +50,7 @@
       <button type="button">Buy Now</button>
     </li>
     <li>
-      <h2>Professional</h2>
+      <h3>Professional</h3>
       <span>$ 799.00</span>
       <p>Per Visit Charge</p>
       <ul>
