--- a/src/partials/prise.html
+++ b/src/partials/prise.html
@@ -1,14 +1,16 @@
 <section class="section prise" id="prise"></section>
 <div class="container">
   <div class="prise__top">
-    <div class="prise__label">
-      <svg class="prise__svg" width="22px" height="27px">
-        <use href="./images/sprite.svg#icon-prise"></use>
-      </svg>
-      <span class="prise__label-text">Price Plan</span>
-    </div>
-    <div class="prise__top-title">
-      <h2>Let’s Customize Work With Affordable Price</h2>
+    <div class="prise__top-left">
+      <div class="prise__label">
+        <svg class="prise__svg" width="22px" height="27px">
+          <use href="./images/sprite.svg#icon-prise"></use>
+        </svg>
+        <span class="prise__label-text">Price Plan</span>
+      </div>
+      <div class="prise__top-title">
+        <h4>Let’s Customize Work <br> With Affordable Price</h4>
+      </div>
     </div>
     <div class="prise__top-text">
       <p>
@@ -20,7 +22,7 @@
   </div>
   <ul>
     <li>
-      <h3>Basic plan</h3>
+      <h5>Basic plan</h5>
       <span>$ 599.00</span>
       <p>Per Visit Charge</p>
       <ul>
@@ -35,7 +37,7 @@
       <button type="button">Buy Now</button>
     </li>
     <li>
-      <h3>Standard</h3>
+      <h5>Standard</h5>
       <span>$ 699.00</span>
       <p>Per Visit Charge</p>
       <ul>
@@ -50,7 +52,7 @@
       <button type="button">Buy Now</button>
     </li>
     <li>
-      <h3>Professional</h3>
+      <h5>Professional</h5>
       <span>$ 799.00</span>
       <p>Per Visit Charge</p>
       <ul>
@@ -68,7 +70,7 @@
   <div>
     <ul>
       <li>
-        <h3>Affordable Price</h3>
+        <h5>Affordable Price</h5>
         <p>
           We adhere strictly to the current National Electrical Code, and we
           conduct regular in-house sessions with our technicians to review any
@@ -76,7 +78,7 @@
         </p>
       </li>
       <li>
-        <h3>Fixed Plan</h3>
+        <h5>Fixed Plan</h5>
         <p>
           We understand fully that your time is of extreme value. You will never
           have to worry about waiting around for our trained technicians.24/7
