--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -37,7 +37,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url(./images/gallery/gallery-top.svg);
+    background-image: url(../images/gallery/gallery-top.svg);
     margin-right: 14px;
   }
 }
