--- a/src/sass/layout/_mix-form.scss
+++ b/src/sass/layout/_mix-form.scss
@@ -10,7 +10,7 @@
 
   &::before {
     content: ' ';
-    background-image: url(./images/mix-form.svg#icon-notebook);
+    background-image: url(../images/mix-form.svg#icon-notebook);
     width: 22px;
     height: 27px;
     margin-left: 20px;
