--- a/src/sass/layout/_welcome.scss
+++ b/src/sass/layout/_welcome.scss
@@ -13,7 +13,7 @@
         // left: 21px;
         // display: inline-block;
         content:'';
-        background-image:url(../images/);
+        background-image: url(../images/welcome/builder@1x.png);
         width: 22px;
         height: 27px;
     }
