--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -1,10 +1,11 @@
-.container {
-  padding-left: 35px;
-  padding-right: 35px;
-}
-
 .gallery {
-  background-color: #1c2752;
+  background-color: $background-dark;
+  padding-top: 150px;
+  padding-bottom: 160px;
+  .container {
+    padding-left: 35px;
+    padding-right: 35px;
+  }
 }
 
 .gallery__top-label {
@@ -12,8 +13,8 @@
 }
 
 .gallery__top-label-text {
-  background-color: #f4f4f4;
-  color: #1c2752;
+  background-color: $background-light-grey;
+  color: $color-text-dark;
   padding-left: 21px;
   padding-right: 20px;
   margin-bottom: 22px;
@@ -56,7 +57,7 @@
   line-height: 1.3;
   text-align: center;
   letter-spacing: 0.36px;
-  color: #ffffff;
+  color: $color-text-white;
   margin-bottom: 49px;
 }
 
@@ -64,11 +65,45 @@
   width: calc((100% - 90px) / 4);
   height: 477px;
   background-color: #ffffff;
-  position: relative;
+  border: 1px solid #d2d2d2;
 }
 
 .gallery__picture {
-  position: absolute;
-  left: calc(50% - 278px / 2);
-  top: calc(50% - 334px / 2 - 50.5px);
+  display: flex;
+  padding-top: 21px;
+  padding-left: 21px;
+  padding-right: 21px;
+  margin-bottom: 27px;
+
+  :hover {
+    box-shadow: 4px -4px 0px 0px rgba(255, 255, 255, 0.74);
+    transform: scale(1.16) translateY(-10px);
+    transition: transform 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275),
+      translateY 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275),
+      box-shadow 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+}
+
+.gallery__name-card {
+  margin-bottom: 4px;
+  font-family: 'Mulish';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 25px;
+  line-height: 1.52;
+  text-align: center;
+  letter-spacing: 0.36px;
+  text-transform: capitalize;
+  color: $color-text-dark;
+}
+
+.gallery__name-classes {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 1.59;
+  text-align: center;
+  letter-spacing: 0.36px;
+  color: $color-text-grey;
 }
