--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -36,7 +36,6 @@ body {
   font-style: normal;
   letter-spacing: 0.36px;
   background-color: $background-light;
-
 }
 
 html {
@@ -51,7 +50,7 @@ a {
   text-decoration: none;
 }
 
-a:hover,
-a:focus {
-  color: $background-orange;
-}
+// a:hover,
+// a:focus {
+//   color: $background-orange;
+// }
