--- a/src/partials/mix-form.html
+++ b/src/partials/mix-form.html
@@ -5,7 +5,7 @@
         <div class="customers_container">
           <p class="customers_paragraf">
             <svg width="22px" height="27px" class="note_svg">
-              <use href="./images/mix-form.svg#icon-notebook"></use>
+              <use href="./images/mix-form/mix-form.svg#icon-notebook"></use>
             </svg>
             Testimonial
           </p>
@@ -14,7 +14,7 @@
         <div class="slider_conteiner">
           <div class="customer_conteiner">
             <img
-              src="./images/slider1.jpg"
+              src="./images/mix-form/slider1.jpg"
               alt="#"
               width="70px"
               height="70px"
@@ -25,7 +25,7 @@
             </div>
             <div class="container_quotes">
               <svg class="icon-quotes" width="23px" height="17px">
-                <use href="./images/mix-form.svg#icon-quotes"></use>
+                <use href="./images/mix-form/mix-form.svg#icon-quotes"></use>
               </svg>
             </div>
           </div>
@@ -40,7 +40,9 @@
         <div class="contact_conteiner">
           <p class="customers_paragraf question">
             <svg width="22px" height="27px" class="note_svg">
-              <use href="./images/mix-form.svg#icon-notebook"></use></svg
+              <use
+                href="./images/mix-form/mix-form.svg#icon-notebook"
+              ></use></svg
             >Any Question
           </p>
           <h3 class="contact_title">99.9% Customer Satisfaction Based</h3>
@@ -56,7 +58,7 @@
       <form class="form">
         <p class="customers_paragraf meet">
           <svg width="22px" height="27px" class="note_svg">
-            <use href="./images/mix-form.svg#icon-notebook"></use></svg
+            <use href="./images/mix-form/mix-form.svg#icon-notebook"></use></svg
           >Meet Us
         </p>
         <h3 class="customers_title">Appointment Form</h3>
@@ -115,7 +117,7 @@
     <div>
       <p class="customers_paragraf client">
         <svg width="22px" height="27px" class="note_svg">
-          <use href="./images/mix-form.svg#icon-notebook"></use>
+          <use href="./images/mix-form/mix-form.svg#icon-notebook"></use>
         </svg>
         Clients
       </p>
