--- a/src/partials/welcome.html
+++ b/src/partials/welcome.html
@@ -1,31 +1,35 @@
 <sections class="section welcome__section">
-    <div class="container"> 
-        <div class="welcome__label">
-            <p class="welcome__label-text">Welcome BlueCollar</p>
-        </div>
+    <div class="container welcome"> 
+        <div class="welcome__blok">
+            <div class="welcome__label">
+                <p class="welcome__label-text">Welcome BlueCollar</p>
+            </div>
 
-        <h2>We Provide Your Future</h2>
-        <ul>
-            <li>Bluecollar Electrical services was established in 2008. We are trusted and reliable electricians who serve customers in the city as well as throughout United States Of America.</li>
-            <li>We have extensive experience of domestic and business electrical installations and no job is too small. Our customers value our professionalism, work ethic and our competitive prices.</li>
-        </ul>
-        <div class="welcome__years">
-            <span>35</span>
-            <p>Years Of Experience</p>
+            <h2 class="welcome__title">We Provide Your Future</h2>
+            <ul class="welcome__history">
+                <li class="welcome__history-item">Bluecollar Electrical services was established in 2008. We are trusted and reliable electricians who serve customers in the city as well as throughout United States Of America.</li>
+                <li class="welcome__history-item">We have extensive experience of domestic and business electrical installations and no job is too small. Our customers value our professionalism, work ethic and our competitive prices.</li>
+            </ul>
+            <div class="welcome__years">
+                <span class="welcome__years-number">35</span>
+                <p class="welcome__years-text">Years Of Experience</p>
+            </div>
+            <ul class="welcome__list">
+                <li class="welcome__item">- For all your system requirements</li>
+                <li class="welcome__item">- All work undertaken by qualified</li>
+                <li class="welcome__item">- Experienced office staff on hand</li>
+                <li class="welcome__item">- A Full Guarantee On Workmanship</li>
+                <li class="welcome__item">- Properties at a reasonable price.</li>
+            </ul>
         </div>
-        <ul>
-            <li>- For all your system requirements</li>
-            <li>- All work undertaken by qualified</li>
-            <li>- Experienced office staff on hand</li>
-            <li>- A Full Guarantee On Workmanship</li>
-            <li>- Properties at a reasonable price.</li>
-        </ul>
-        <source
-            srcset="
-                ./images/welcome/builder@1x.png 1x,
-                ./images/welcome/builder@2x.png 2x
-                ../images/welcome/builder@1x.png"
-            />
-        <img src="./images/welcome/builder@1x.png" alt="builder" width="575" height="581">
+        <div class="welcome__imeg">
+            <source 
+                srcset="
+                    ./images/welcome/builder@1x.png 1x,
+                    ./images/welcome/builder@2x.png 2x
+                    ../images/welcome/builder@1x.png"
+                />
+            <img src="./images/welcome/builder@1x.png" alt="builder" width="575" height="581">
+        </div>
     </div>
 </sections>
