--- a/src/sass/layout/_welcome.scss
+++ b/src/sass/layout/_welcome.scss
@@ -1,21 +1,123 @@
-.welcome__label {
-    background-color: $background-light-grey;
-    width: 249px;
-    height: 27px;
+.welcome__section {
+    padding-top: 140px;
+    padding-bottom: 140px;
+    height: 861px;
+    display: block;
+    position: relative;
+    background-color: $background-light;
+}
+.welcome__imeg{
+    position: absolute;
+    left: 120px;
+    top: 140px;
+    bottom: 140px;
 }
 
-.welcome__label-text {
+.welcome__blok {
+    display: flex;
+    padding-left: 745px;
+    flex-direction: column;
+}
+.welcome__label {
+    background-color: #e6e4e4f6;
+    width: 249px;
+    height: 27px;
+    padding-left: 52px;
+    padding-right: 20px;
+    justify-content: center;
+    margin-bottom: 22px;
+    text-align: center;
+    display: inline-block;
+    position: relative;
+    
+}
+
+.welcome__label-text{
     font-weight: 400;
     font-size: 18px;
-    line-height: 1,5;
-    &::after {
-        // position: absolute;
-        // left: 21px;
-        // display: inline-block;
-        content:'';
-        background-image: url(../images/welcome/builder@1x.png);
+    line-height: 1.5;
+    color: $color-text-dark;
+  
+    &::before {
+        content: '';
+        background-image: url(../images/offer/offer-top.svg);
         width: 22px;
         height: 27px;
-    }
-
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-color: transparent;
+        background-position: center;
+        margin-right: 10px; 
+        display: inline-block;
+        position: absolute;
+        left: 21px;
+    }   
+}
+.welcome__title {
+    font-family: 'Mulish';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 45px;
+    line-height: 1.28;
+    margin-bottom: 12px;
+    
+}
+.welcome__history-item {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 27px;
+    letter-spacing: 0.36px;
+    color: $color-text-grey;
+    margin-bottom: 10px;
+}
+.welcome__years {
+    width: 198px;
+    height: 220px;
+    background-color: #e6e4e4f6;
+    padding-left: 43px;
+    padding-right: 43px;
+    padding-top: 24px;
+    display: block;
+    margin-top: 17px;
+}
+.welcome__years-number {
+    font-family: 'Mulish';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 80px;
+    line-height: 1.1;
+    text-align: center;
+    letter-spacing: 0.36px;
+    color: #FFB342;
+    align-items: center;
+    justify-content: center;
+}
+.welcome__years-text {
+    font-family: 'Mulish';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 1.3;
+    text-align: center;
+    letter-spacing: 0.36px;
+    color: #1C2752;
+    margin-top: 16px;
+}
+.welcome__list {
+    position: absolute;
+    left: 983px;
+    top: 478px;
+    margin-left: 40px;
+}
+.welcome__item {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 1.58;
+    letter-spacing: 0.36px;
+    color: #7E7E7E;
+    margin-bottom: 10px;
 }
