--- a/src/partials/prise.html
+++ b/src/partials/prise.html
@@ -20,8 +20,9 @@
       </p>
     </div>
   </div>
-  <ul>
-    <li>
+  <div>
+  <ul class="prise__list">
+    <li class="prise__list-item">
       <h5>Basic plan</h5>
       <span>$ 599.00</span>
       <p>Per Visit Charge</p>
@@ -67,19 +68,26 @@
       <button type="button">Buy Now</button>
     </li>
   </ul>
+  </div>
   <div>
-    <ul>
-      <li>
-        <h5>Affordable Price</h5>
-        <p>
+    <ul class="prise__text-botton">
+      <svg class="prise__marker-botton" width="32px" height="32px">
+          <use href="./images/sprite.svg#icon-images-vector-dark"></use>
+        </svg>
+      <li class="prise__text-list"> 
+        <h5 class="prise__text-name">Affordable Price</h5>
+        <p class="prise__text-p">
           We adhere strictly to the current National Electrical Code, and we
           conduct regular in-house sessions with our technicians to review any
           code changes and applications.
         </p>
       </li>
-      <li>
-        <h5>Fixed Plan</h5>
-        <p>
+      <svg class="prise__marker-botton" width="32px" height="32px">
+          <use href="./images/sprite.svg#icon-images-vector-dark"></use>
+        </svg>
+      <li class="prise__text-list">
+        <h5 class="prise__text-name">Fixed Plan</h5>
+        <p class="prise__text-p">
           We understand fully that your time is of extreme value. You will never
           have to worry about waiting around for our trained technicians.24/7
           Service Providers Affordable Price.
