--- a/src/sass/layout/_prise.scss
+++ b/src/sass/layout/_prise.scss
@@ -69,4 +69,59 @@
     margin-top: 180px;
     margin-bottom: 86px;
   }
+  
+  &__list {
+    display: flex;
+  }
+
+  &__list-item {
+    
+  }
+
+
+
+
+
+
+
+  &__text-botton {
+    display: flex;
+    margin-top: 60px;
+    margin-bottom: 15px;
+
+  }
+
+  &__marker-botton {
+    width: 32px;
+    height: 32px;
+    margin-right: 15px;
+  }
+
+  &__text-list {
+    margin-right: 67px;
+
+    &.last-child {
+      margin-right: 0;
+    }
+  }
+
+  &__text-name {
+    font-family: 'Mulish';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 1.4;
+    color: $color-text-dark;
+    letter-spacing: 0.36px;
+  }
+
+  &__text-p {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 1.59;
+    color: $color-text-grey;
+    letter-spacing: 0.36px;
+  }
 }
