--- a/src/partials/mix-form.html
+++ b/src/partials/mix-form.html
@@ -114,14 +114,38 @@
         </div>
       </form>
     </div>
-    <div>
-      <p class="customers_paragraf client">
-        <svg width="22px" height="27px" class="note_svg">
-          <use href="./images/mix-form/mix-form.svg#icon-notebook"></use>
-        </svg>
-        Clients
-      </p>
-      <h3 class="customers_title">Our Trusted Big Clients!</h3>
+    <div class="company_conteiner">
+      <div class="company_top-text">
+        <p class="customers_paragraf client">
+          <svg width="22px" height="27px" class="note_svg">
+            <use href="./images/mix-form/mix-form.svg#icon-notebook"></use>
+          </svg>
+          Clients
+        </p>
+      </div>
+      <h3 class="customers_title company">Our Trusted Big Clients!</h3>
+      <ul class="company_list">
+        <li class="company_item">
+          <a href="#">
+            <img src="./images/mix-form/company1.png" alt="" />
+            </a
+          >
+        </li>
+        <li class="company_item">
+          <a href="#">
+<img src="./images/mix-form/company2.png" alt="" />
+          </a>
+        </li>
+        <li class="company_item">
+          <a href="#">
+<img src="./images/mix-form/company3.png" alt="" /></a>
+        </li>
+        <li class="company_item">
+          <a href="#">
+<img src="./images/mix-form/company4.png" alt="" /></use></svg
+          ></a>
+        </li>
+      </ul>
     </div>
   </div>
 </section>
