--- a/src/sass/layout/_mix-form.scss
+++ b/src/sass/layout/_mix-form.scss
@@ -211,7 +211,7 @@
   width: 484px;
   height: 65px;
   margin-bottom: 25px;
-  padding: 19px 0 19px 44px;
+  padding: 19px 10px 19px 44px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   // font-family: 'Inter';
   // font-style: normal;
@@ -221,6 +221,11 @@
   // letter-spacing: 0.36px;
   // color: #1c2752;
   transition: border-color 300ms linear;
+  outline: none;
+
+  &.date {
+    color: rgba(33, 33, 33, 0.2);
+  }
 
   &:hover,
   &:focus {
@@ -250,6 +255,7 @@
   padding: 19px 0 0 44px;
   resize: none;
   transition: border-color 300ms linear;
+  outline: none;
 
   &:hover,
   &:focus {
