--- a/src/partials/mix-form.html
+++ b/src/partials/mix-form.html
@@ -96,7 +96,8 @@
                 type="date"
                 min="1990-01-01"
                 max="2022-12-12"
-                class="modal_input"
+              
+                class="modal_input date"
               />
             </label>
           </div>
