--- a/src/partials/mix-form.html
+++ b/src/partials/mix-form.html
@@ -11,8 +11,9 @@
           </p>
           <h3 class="customers_title">Customers Says</h3>
         </div>
-        <div class="slider_conteiner">
-          <div class="customer_conteiner">
+        <div class="slider">
+          <div>          
+            <div class="customer_conteiner">
             <img
               src="./images/mix-form/slider1.jpg"
               alt="#"
@@ -29,13 +30,66 @@
               </svg>
             </div>
           </div>
-          <div class="slider">
+          <div class="slider_coments">
             <p class="slider_paragraf">
               We have had several good experiences with Blue Collar team. Most
               recently, they replaced our 20-year-old HVAC system with a new,
               modern, and more efficient system & it worked fine.
             </p>
           </div>
+        </div>
+        <div>          
+            <div class="customer_conteiner">
+            <img
+              src="./images/mix-form/slider1.jpg"
+              alt="#"
+              width="70px"
+              height="70px"
+            />
+            <div class="customer_info">
+              <p class="customer_name">Nancy luther</p>
+              <span class="customer_sity">NewYork</span>
+            </div>
+            <div class="container_quotes">
+              <svg class="icon-quotes" width="23px" height="17px">
+                <use href="./images/mix-form/mix-form.svg#icon-quotes"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="slider_coments">
+            <p class="slider_paragraf">
+              We have had several good experiences with Blue Collar team. Most
+              recently, they replaced our 20-year-old HVAC system with a new,
+              modern, and more efficient system & it worked fine.
+            </p>
+          </div>
+        </div>
+               <div>          
+            <div class="customer_conteiner">
+            <img
+              src="./images/mix-form/slider1.jpg"
+              alt="#"
+              width="70px"
+              height="70px"
+            />
+            <div class="customer_info">
+              <p class="customer_name">Nancy luther</p>
+              <span class="customer_sity">NewYork</span>
+            </div>
+            <div class="container_quotes">
+              <svg class="icon-quotes" width="23px" height="17px">
+                <use href="./images/mix-form/mix-form.svg#icon-quotes"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="slider_coments">
+            <p class="slider_paragraf">
+              We have had several good experiences with Blue Collar team. Most
+              recently, they replaced our 20-year-old HVAC system with a new,
+              modern, and more efficient system & it worked fine.
+            </p>
+          </div>
+        </div>
         </div>
         <div class="contact_conteiner">
           <p class="customers_paragraf question">
