--- a/src/sass/layout/_mix-form.scss
+++ b/src/sass/layout/_mix-form.scss
@@ -70,7 +70,7 @@
   }
 }
 
-.slider_conteiner {
+.slider {
   border-radius: 0;
   border: 1px solid #dddddd;
   padding: 41px;
@@ -127,7 +127,7 @@
 //   margin-left: auto;
 // }
 
-.slider {
+.slider_coments {
   margin-top: 20px;
   width: 500px;
 }
@@ -255,7 +255,6 @@
   padding: 19px 0 0 44px;
   resize: none;
   transition: border-color 300ms linear;
-  outline: none;
 
   &:hover,
   &:focus {
