--- a/src/sass/layout/_mix-form.scss
+++ b/src/sass/layout/_mix-form.scss
@@ -71,13 +71,36 @@
 }
 
 .slider {
+  position: relative;
   border-radius: 0;
   border: 1px solid #dddddd;
   padding: 41px;
   width: 591px;
   height: 378px;
-  background-color: #f5f5f5;
+  // background-color: #f5f5f5;
   margin-bottom: 40px;
+}
+
+.slick-prev {
+  position: absolute;
+  top: 300px;
+  left: 50px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  // background-image: url(../images/mix-form/left.png);
+  background-color: #f4f4f4;
+}
+
+.slick-next {
+  position: absolute;
+  top: 300px;
+  right: 420px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  // background-image: url(../images/mix-form/right.png);
+  background-color: #f4f4f4;
 }
 
 .customer_conteiner {
